--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "name": "Oasis-Desktop",
+        "icon": "./icons/icon.png"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
